cabal-version:      3.0

name:               p2p-onramp
version:            0.1.0.0
synopsis:           ZkFold's P2P on-ramp application
homepage:           zkfold.io
author:             Vladimir Sinyakov, Pavel Sokolov, Murat Kasimov, Vladimir Morozov
maintainer:         info@zkfold.io
extra-source-files: CHANGELOG.md
license-file:       LICENSE
build-type:         Simple

description:
  This repository contains the source code for ZkFold's P2P on-ramp application.

library
    exposed-modules:
        ZkFold.P2P.Contract
    build-depends:
        base                          >= 4.9 && < 5,
        mtl                                        ,
        zkfold-base
    hs-source-dirs: src
    default-extensions:
      BangPatterns,
      BinaryLiterals,
      ConstraintKinds,
      DataKinds,
      DefaultSignatures,
      DeriveDataTypeable,
      DeriveFoldable,
      DeriveFunctor,
      DeriveGeneric,
      DeriveTraversable,
      ExistentialQuantification,
      FlexibleContexts,
      FlexibleInstances,
      FunctionalDependencies,
      GADTs,
      GeneralizedNewtypeDeriving,
      InstanceSigs,
      KindSignatures,
      LambdaCase,
      MultiParamTypeClasses,
      MultiWayIf,
      NamedFieldPuns,
      NoImplicitPrelude,
      NumericUnderscores,
      OverloadedStrings,
      OverloadedLabels,
      PolyKinds,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      StandaloneKindSignatures,
      TupleSections,
      TypeApplications,
      TypeFamilies,
      ViewPatterns

executable p2p-onramp-app
    main-is:          Main.hs
    build-depends:
        base
    hs-source-dirs:   app
    default-language: Haskell2010
