cabal-version:      3.0

name:               p2p-onramp
version:            0.1.0.0
synopsis:           ZkFold's P2P on-ramp application
homepage:           zkfold.io
author:             Vladimir Sinyakov, Pavel Sokolov, Murat Kasimov, Vladimir Morozov
maintainer:         info@zkfold.io
extra-source-files: CHANGELOG.md
license-file:       LICENSE
build-type:         Simple

description:
  This repository contains the source code for ZkFold's P2P on-ramp application.


Flag Pedantic
    Description: Enable pedantic build with -Werror
    Manual: True
    Default: False

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances
      -Wpartial-fields
      -Wredundant-constraints
      -O2
      -threaded
    if flag(pedantic)
      ghc-options:
        -Werror
    default-extensions:
      BangPatterns,
      BinaryLiterals,
      ConstraintKinds,
      DataKinds,
      DefaultSignatures,
      DeriveDataTypeable,
      DeriveFoldable,
      DeriveFunctor,
      DeriveGeneric,
      DeriveTraversable,
      ExistentialQuantification,
      FlexibleContexts,
      FlexibleInstances,
      FunctionalDependencies,
      GADTs,
      GeneralizedNewtypeDeriving,
      InstanceSigs,
      KindSignatures,
      LambdaCase,
      MultiParamTypeClasses,
      MultiWayIf,
      NamedFieldPuns,
      NoImplicitPrelude,
      NoStarIsType,
      NumericUnderscores,
      OverloadedStrings,
      OverloadedLabels,
      PolyKinds,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      StandaloneKindSignatures,
      TupleSections,
      TypeApplications,
      TypeFamilies,
      ViewPatterns

library
    import: options
    exposed-modules:
        ZkFold.P2P.Contract
    build-depends:
        base                          >= 4.9 && < 5,
        mtl                                        ,
        zkfold-base
    hs-source-dirs: src

executable p2p-onramp-app
    import: options
    ghc-options: -rtsopts
    main-is:          Main.hs
    build-depends:
        base
    hs-source-dirs:   app

test-suite p2p-onramp-test
    import: options
    type: exitcode-stdio-1.0
    ghc-options: -rtsopts
    main-is: Main.hs
    other-modules:
      Tests.Signature
    build-depends:
      base                          >= 4.9 && < 5,
      hspec                                < 2.12,
      QuickCheck                                 ,
      p2p-onramp                                 ,
      zkfold-base                                ,
    hs-source-dirs: tests
