cabal-version:      3.0

name:               p2p-onramp
version:            0.1.0.0
synopsis:           ZkFold's P2P on-ramp application
homepage:           zkfold.io
author:             Vladimir Sinyakov, Pavel Sokolov, Vladimir Morozov, Antonio Hernandez, Murat Kasimov
maintainer:         info@zkfold.io
extra-source-files: CHANGELOG.md
license-file:       LICENSE
build-type:         Simple

description:
  This repository contains the source code for ZkFold's P2P on-ramp application.


Flag Pedantic
    Description: Enable pedantic build with -Werror
    Manual: True
    Default: False

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances
      -Wpartial-fields
      -Wredundant-constraints
      -O2
      -threaded
    if flag(pedantic)
      ghc-options:
        -Werror
    default-extensions:
      BangPatterns,
      BinaryLiterals,
      ConstraintKinds,
      DataKinds,
      DefaultSignatures,
      DeriveDataTypeable,
      DeriveFoldable,
      DeriveFunctor,
      DeriveGeneric,
      DeriveTraversable,
      DerivingStrategies,
      ExistentialQuantification,
      FlexibleContexts,
      FlexibleInstances,
      FunctionalDependencies,
      GADTs,
      GeneralizedNewtypeDeriving,
      InstanceSigs,
      KindSignatures,
      LambdaCase,
      MultiParamTypeClasses,
      MultiWayIf,
      NamedFieldPuns,
      NoImplicitPrelude,
      NoStarIsType,
      NumericUnderscores,
      OverloadedStrings,
      OverloadedLabels,
      PolyKinds,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      StandaloneKindSignatures,
      TupleSections,
      TypeApplications,
      TypeFamilies,
      ViewPatterns

library
    import: options
    exposed-modules:
      ZkFold.Cardano.UPLC.OnRamp
      ZkFold.Cardano.Crypto.Utils
      ZkFold.Cardano.Parse.Utils
    build-depends:
      aeson                                      ,
      base                          >= 4.9 && < 5,
      base16-bytestring                          ,
      bytestring                                 ,
      cardano-api                                ,
      cryptonite                                 ,
      mtl                                        ,
      parsec                                     ,
      plutus-ledger-api                          ,
      plutus-tx                                  ,
      plutus-tx-plugin                           ,
      symbolic-base                              ,
      zkfold-cardano
    hs-source-dirs: src

executable p2p-init-transaction
  import:           options
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   backends/p2p-init-transaction
  build-depends:
    base              >= 4.9 && < 5,
    bytestring                     ,
    directory                      ,
    filepath                       ,
    p2p-onramp                     ,
    plutus-ledger-api              ,
    plutus-tx                      ,
    plutus-tx-plugin               ,
    zkfold-cardano

executable p2p-add-seller
  import:           options
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  other-modules:    P2P.Example
  hs-source-dirs:   backends/p2p-add-seller
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    cryptonite                     ,
    directory                      ,
    filepath                       ,
    memory                         ,
    p2p-onramp                     ,
    plutus-ledger-api              ,
    plutus-tx                      ,
    zkfold-cardano

executable p2p-buy-order
  import:           options
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   backends/p2p-buy-order
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    base16-bytestring              ,
    bytestring                     ,
    cryptonite                     ,
    directory                      ,
    filepath                       ,
    memory                         ,
    p2p-onramp                     ,
    plutus-ledger-api              ,
    plutus-tx                      ,
    zkfold-cardano

test-suite p2p-onramp-test
    import: options
    type: exitcode-stdio-1.0
    ghc-options: -rtsopts
    main-is: Main.hs
    other-modules:
    build-depends:
      base                          >= 4.9 && < 5,
      hspec                                < 2.12,
      QuickCheck                                 ,
      p2p-onramp                                 ,
      symbolic-base                              ,
    hs-source-dirs: tests
